# iggy-1

./: Cargo.toml  DEPENDENCIES.md  package-lock.json
.github/actions/utils/setup-rust-with-cache/: action.yml
.github/workflows/: _build_rust_artifacts.yml  _test.yml  post-merge.yml
core/common/: Cargo.toml
core/common/src/sender/: mod.rs
core/connectors/runtime/example_config/connectors/: influxdb_sink.toml  influxdb_source.toml
core/connectors/sdk/src/: lib.rs
core/connectors/sinks/: README.md
core/connectors/sinks/elasticsearch_sink/: Cargo.toml
core/connectors/sinks/influxdb_sink/: Cargo.toml  README.md  config.toml
core/connectors/sinks/influxdb_sink/src/: lib.rs
core/connectors/sinks/redshift_sink/: Cargo.toml  README.md
core/connectors/sinks/redshift_sink/src/: config.rs  lib.rs  s3.rs
core/connectors/sources/: README.md
core/connectors/sources/influxdb_source/: Cargo.toml  README.md
core/connectors/sources/influxdb_source/src/: lib.rs
core/integration/: Cargo.toml
core/integration/src/harness/orchestrator/: harness.rs
core/integration/tests/connectors/: mod.rs
core/integration/tests/connectors/redshift/: config.toml  mod.rs  redshift_sink.rs
core/integration/tests/connectors/redshift/connectors_config/: redshift.toml
