# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iggy_connector_redshift_sink"
version = "0.1.0"
description = "Iggy Redshift sink connector for loading stream messages into Amazon Redshift via S3 staging"
edition = "2021"
license = "Apache-2.0"
keywords = ["iggy", "messaging", "streaming", "redshift", "sink", "aws"]
categories = ["command-line-utilities", "database", "network-programming"]
homepage = "https://iggy.apache.org"
documentation = "https://iggy.apache.org/docs"
repository = "https://github.com/apache/iggy"
readme = "README.md"

[package.metadata.cargo-machete]
ignored = ["dashmap", "once_cell", "futures", "simd-json", "prost"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
iggy_connector_sdk = { workspace = true }
once_cell = { workspace = true }
rust-s3 = { workspace = true }
serde = { workspace = true }
simd-json = { workspace = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
